--- a/train_audio/vss_walloc_hyb_eval.ipynb
+++ b/train_audio/vss_walloc_hyb_eval.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f9fb6e2c-4804-49b3-95dc-c22da3d87bee",
    "metadata": {},
    "outputs": [
@@ -226,10 +226,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "71a809a7-fd4b-4f39-9f55-c055d81e0b44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34.017833531460866\n",
+      "3.257686698211142\n",
+      "-16.567763249392744\n",
+      "35.43240171074247\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.mean(eval_only['PSNR']))\n",
     "print(np.mean(eval_only['SSDR']))\n",
@@ -239,51 +250,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7686c077-ed51-4f5c-850c-235ce3c155c2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9533457f45f49dfa8382123f994e75f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd9cbb99faf24ff3ba3a01900f15158b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_walloc_5x/commit/c5a0af848d0605455fc30e191aecc0ef64d9773f', commit_message='Upload dataset', commit_description='', oid='c5a0af848d0605455fc30e191aecc0ef64d9773f', pr_url=None, pr_revision=None, pr_num=None)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "eval_only.push_to_hub(\"danjacobellis/MUSDB_vss_walloc_5x\",split='validation')"
+    "# eval_only.push_to_hub(\"danjacobellis/MUSDB_vss_walloc_5x\",split='validation')"
    ]
   }
  ],
