--- a/train_audio/vss_samples_eval.ipynb
+++ b/train_audio/vss_samples_eval.ipynb
@@ -7,12 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/vss_samples_baseline_e10.pth"
+    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/vss_samples_baseline.pth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b575600f-e76e-4098-8b05-86bbee490c63",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c7f258bd-068c-455b-b854-631de4a5e3ff",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "7.45856"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
     "\n",
     "cdpam_loss = cdpam.CDPAM()\n",
     "\n",
-    "checkpoint = torch.load(\"vss_samples_baseline_e10.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"vss_samples_baseline.pth\",map_location=\"cpu\",weights_only=False)\n",
     "config = checkpoint['config']\n",
     "model = IsotropicOobleckAutoencoder(\n",
     "    channels=config.channels,\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "caca760e-9293-4509-b159-e3fc78268bc6",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b4b14a6a-0d51-4c90-ac53-b9c395cdfd79",
    "metadata": {},
    "outputs": [],
@@ -146,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "fab28cd9-bdc8-4d5b-8da5-98f40335fccf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c48921beca064a2bbceb5e2fa94b0323",
+       "model_id": "a7673a4b39c94adab458fbb42f69f5cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2e686f38-bed4-4454-b031-0a73e0aa1353",
    "metadata": {},
    "outputs": [
@@ -188,10 +188,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31.397256376295317\n",
-      "5.290369685190391\n",
-      "-0.512712064131561\n",
-      "36.79457700600062\n"
+      "31.094924597682635\n",
+      "4.224436804963846\n",
+      "-1.5626659857180274\n",
+      "36.259136320108105\n"
      ]
     }
    ],
@@ -204,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c081cab6-3376-4646-857f-050a95c7a688",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "173038b8f55747b799950a528c3df029",
+       "model_id": "96065c1c796542eaa4c6af389f4767f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "824ba0dc723946fea5f4a0b3557cd4bd",
+       "model_id": "7897d7bbbcd648e99267222721f7e318",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,16 +239,16 @@
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_samples_rr_baseline/commit/9d5d20804a1a900cd22e6dc03cd7350db9ff12a4', commit_message='Upload dataset', commit_description='', oid='9d5d20804a1a900cd22e6dc03cd7350db9ff12a4', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_samples_baseline/commit/64caf1140908712135f9b55663dd794ec6843191', commit_message='Upload dataset', commit_description='', oid='64caf1140908712135f9b55663dd794ec6843191', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_only.push_to_hub(\"danjacobellis/MUSDB_vss_samples_rr_baseline\",split='validation')"
+    "eval_only.push_to_hub(\"danjacobellis/MUSDB_vss_samples_baseline\",split='validation')"
    ]
   }
  ],
