--- a/train_audio/vss_table.ipynb
+++ b/train_audio/vss_table.ipynb
@@ -15,12 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "5ac7b900-5c22-40c8-bc71-f08f366acdae",
    "metadata": {},
    "outputs": [],
    "source": [
     "methods = [\n",
+    "    \"danjacobellis/MUSDB_vss_samples_baseline\",\n",
     "    \"danjacobellis/MUSDB_vss_samples_rr_4x\",\n",
     "    \"danjacobellis/MUSDB_vss_walloc_5x\",\n",
     "    \"danjacobellis/MUSDB_vss_samples_rr_18x\",\n",
@@ -28,6 +29,7 @@
     "]\n",
     "\n",
     "dimensiona_reduction = [\n",
+    "    1,\n",
     "    4,\n",
     "    512/108,\n",
     "    18,\n",
@@ -35,6 +37,7 @@
     "]\n",
     "\n",
     "names = [\n",
+    "    'Original',\n",
     "    'Downsample',\n",
     "    'WalloC 5x',\n",
     "    'Downsample',\n",
@@ -43,8 +46,8 @@
     "\n",
     "metrics = [\n",
     "    'PSNR',\n",
-    "    # 'SSDR',\n",
-    "    # 'SRDR',\n",
+    "    'SSDR',\n",
+    "    'SRDR',\n",
     "    'CDPAM',\n",
     "]\n",
     "\n",
@@ -57,40 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "22b762c8-d04b-435e-a46b-1baf96a47b1e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Name', 'Dimensionality Reduction', 'Equivalent Fs', 'PSNR', 'CDPAM']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "17273f0d-a1e7-42f4-b395-89ce55bce35f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "| Name       |   Dimensionality Reduction |   Equivalent Fs |    PSNR |   CDPAM |\n",
-       "|:-----------|---------------------------:|----------------:|--------:|--------:|\n",
-       "| Downsample |                     4      |        11025    | 31.9733 | 37.3354 |\n",
-       "| WalloC 5x  |                     4.7407 |         9302.34 | 34.2437 | 35.5056 |\n",
-       "| Downsample |                    18      |         2450    | 31.5943 | 36.6061 |\n",
-       "| WalloC 20x |                    18.963  |         2325.59 | 34.2317 | 36.0921 |"
+       "| Name       |   Dimensionality Reduction |   Equivalent Fs |    PSNR |   SSDR |     SRDR |   CDPAM |\n",
+       "|:-----------|---------------------------:|----------------:|--------:|-------:|---------:|--------:|\n",
+       "| Original   |                     1      |        44100    | 31.0949 | 4.2244 |  -1.5627 | 36.2591 |\n",
+       "| Downsample |                     4      |        11025    | 31.9733 | 7.2344 |   0.6237 | 37.3354 |\n",
+       "| WalloC 5x  |                     4.7407 |         9302.34 | 34.3535 | 3.7553 | -15.8359 | 35.4549 |\n",
+       "| Downsample |                    18      |         2450    | 31.5943 | 5.4661 |  -0.1821 | 36.6061 |\n",
+       "| WalloC 20x |                    18.963  |         2325.59 | 34.2317 | 4.2656 | -16.356  | 36.0921 |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -123,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "2f066e91-060f-40db-87ba-369dc48183fe",
    "metadata": {},
    "outputs": [
@@ -131,14 +114,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{lrrrr}\n",
+      "\\begin{tabular}{lrrrrrrrr}\n",
       "\\toprule\n",
-      " & Name & Dimensionality Reduction & Equivalent Fs & PSNR & CDPAM \\\\\n",
+      " & Name & Dimensionality Reduction & Equivalent Fs & PSNR & SSDR & SRDR & CDPAM \\\\\n",
       "\\midrule\n",
-      "\\textbf{0} & Downsample & 4 & 1.1e+04 & 32 & 37.3 \\\\\n",
-      "\\textbf{1} & WalloC 5x & 4.74 & 9.3e+03 & 34.2 & 35.5 \\\\\n",
-      "\\textbf{2} & Downsample & 18 & 2.45e+03 & 31.6 & 36.6 \\\\\n",
-      "\\textbf{3} & WalloC 20x & 19 & 2.33e+03 & 34.2 & 36.1 \\\\\n",
+      "\\textbf{0} & Original & 1 & 4.41e+04 & 31.1 & 4.22 & -1.56 & 36.3 \\\\\n",
+      "\\textbf{1} & Downsample & 4 & 1.1e+04 & 32 & 7.23 & 0.624 & 37.3 \\\\\n",
+      "\\textbf{2} & WalloC 5x & 4.74 & 9.3e+03 & 34.4 & 3.76 & -15.8 & 35.5 \\\\\n",
+      "\\textbf{3} & Downsample & 18 & 2.45e+03 & 31.6 & 5.47 & -0.182 & 36.6 \\\\\n",
+      "\\textbf{4} & WalloC 20x & 19 & 2.33e+03 & 34.2 & 4.27 & -16.4 & 36.1 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
