--- a/train_audio/vss_walloc_hyb_eval.ipynb
+++ b/train_audio/vss_walloc_hyb_eval.ipynb
@@ -107,7 +107,7 @@
     "codec.load_state_dict(codec_checkpoint['model_state_dict'])\n",
     "codec.eval();\n",
     "\n",
-    "checkpoint = torch.load(\"log_cuda_2.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"vss_walloc_5x.pth\",map_location=\"cpu\",weights_only=False)\n",
     "config = checkpoint['config']\n",
     "model = IsotropicOobleckAutoencoder(\n",
     "    channels=codec_config.latent_dim,\n",
@@ -199,7 +199,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3949372244842aea004e048c01244d7",
+       "model_id": "43262b04dd3b4bc78af030ee209e26e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "71a809a7-fd4b-4f39-9f55-c055d81e0b44",
    "metadata": {},
    "outputs": [
@@ -234,10 +234,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34.017833531460866\n",
-      "3.257686698211142\n",
-      "-16.567763249392744\n",
-      "35.43240171074247\n"
+      "34.353491708321236\n",
+      "3.7552811927583205\n",
+      "-15.835884736937013\n",
+      "35.45486784563463\n"
      ]
     }
    ],
@@ -250,12 +250,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7686c077-ed51-4f5c-850c-235ce3c155c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "30fe8ce2c0934342a06535c9c288e01d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d4db3445c624100b97c0d7351c38748",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_walloc_5x/commit/7884916eb37136fe11e6c1dcb8c4e18ea4384c5b', commit_message='Upload dataset', commit_description='', oid='7884916eb37136fe11e6c1dcb8c4e18ea4384c5b', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# eval_only.push_to_hub(\"danjacobellis/MUSDB_vss_walloc_5x\",split='validation')"
+    "eval_only.push_to_hub(\"danjacobellis/MUSDB_vss_walloc_5x\",split='validation')"
    ]
   }
  ],
