--- a/RD/rd_table_GPU.ipynb
+++ b/RD/rd_table_GPU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "47453076-df61-49cf-a4a4-092bb71b2fd1",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "5ac7b900-5c22-40c8-bc71-f08f366acdae",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
     "\n",
     "names = [\n",
     "    # 'WEBP',\n",
-    "    'Cheng2020',\n",
+    "    # 'Cheng2020',\n",
     "    'WaLLoC',\n",
     "    'Stable Diffusion 3',\n",
     "    'WaLLoC',\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "17273f0d-a1e7-42f4-b395-89ce55bce35f",
    "metadata": {},
    "outputs": [
@@ -73,9 +73,9 @@
       "text/markdown": [
        "| Name               |   Dimensionality Reduction |   Compression Ratio |   Encode (CPU) |   Decode (CPU) |   Encode (GPU) |   Decode (GPU) |    PSNR |   MSSIM |   LPIPS_dB |   DISTS_dB |\n",
        "|:-------------------|---------------------------:|--------------------:|---------------:|---------------:|---------------:|---------------:|--------:|--------:|-----------:|-----------:|\n",
-       "| Cheng2020          |                          4 |              8.5313 |        13.9753 |         0.47   |        18.7225 |        130.437 | 33.5474 |  0.9902 |    11.2465 |    19.2875 |\n",
-       "| WaLLoC             |                         12 |              6      |         0.1949 |         0.1013 |         6.9705 |        332.164 | 20.8806 |  0.8399 |     8.3253 |    13.8466 |\n",
-       "| Stable Diffusion 3 |                         16 |             35.1925 |        22.0586 |         0.4657 |        36.3303 |        211.692 | 27.4524 |  0.97   |     6.5131 |    13.8514 |"
+       "| WaLLoC             |                          4 |              8.5313 |        13.9753 |         0.47   |        18.7225 |        130.437 | 33.5474 |  0.9902 |    11.2465 |    19.2875 |\n",
+       "| Stable Diffusion 3 |                         12 |              6      |         0.1949 |         0.1013 |         6.9705 |        332.164 | 20.8806 |  0.8399 |     8.3253 |    13.8466 |\n",
+       "| WaLLoC             |                         16 |             35.1925 |        22.0586 |         0.4657 |        36.3303 |        211.692 | 27.4524 |  0.97   |     6.5131 |    13.8514 |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -111,6 +111,14 @@
     "md_table = df_rounded.to_markdown(index=False)\n",
     "display(Markdown(md_table))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41e5367a-09d2-447b-8abc-13d32715354a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
