--- a/RD/walloc_raspi.ipynb
+++ b/RD/walloc_raspi.ipynb
@@ -7,12 +7,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://hf.co/danjacobellis/walloc/resolve/main/RGB_Li_192c_J4_nf8_v1.0.2.pth"
+    "!wget https://hf.co/danjacobellis/walloc/resolve/main/RGB_Li_48c_J4_nf8_v1.0.2.pth"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "46f87008-210d-40af-a8a0-bf95df05d8e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Architecture:                    aarch64\n",
+      "CPU op-mode(s):                  32-bit, 64-bit\n",
+      "Byte Order:                      Little Endian\n",
+      "CPU(s):                          4\n",
+      "On-line CPU(s) list:             0-3\n",
+      "Thread(s) per core:              1\n",
+      "Core(s) per socket:              4\n",
+      "Socket(s):                       1\n",
+      "Vendor ID:                       ARM\n",
+      "Model:                           3\n",
+      "Model name:                      Cortex-A72\n",
+      "Stepping:                        r0p3\n",
+      "CPU max MHz:                     1500.0000\n",
+      "CPU min MHz:                     600.0000\n",
+      "BogoMIPS:                        108.00\n",
+      "Vulnerability Itlb multihit:     Not affected\n",
+      "Vulnerability L1tf:              Not affected\n",
+      "Vulnerability Mds:               Not affected\n",
+      "Vulnerability Meltdown:          Not affected\n",
+      "Vulnerability Spec store bypass: Vulnerable\n",
+      "Vulnerability Spectre v1:        Mitigation; __user pointer sanitization\n",
+      "Vulnerability Spectre v2:        Vulnerable\n",
+      "Vulnerability Srbds:             Not affected\n",
+      "Vulnerability Tsx async abort:   Not affected\n",
+      "Flags:                           fp asimd evtstrm crc32 cpuid\n"
+     ]
+    }
+   ],
+   "source": [
+    "!lscpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "6d7db02c-516f-4ddd-ba4a-31b7dcc18526",
    "metadata": {},
    "outputs": [],
@@ -31,12 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "389e035a-effe-4599-807b-96c213e5a634",
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint = torch.load(\"RGB_Li_192c_J4_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"RGB_Li_48c_J4_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
     "codec_config = checkpoint['config']\n",
     "codec = walloc.Codec2D(\n",
     "    channels = codec_config.channels,\n",
@@ -48,13 +90,13 @@
     "    lightweight_encode = codec_config.lightweight_encode\n",
     ")\n",
     "codec.load_state_dict(checkpoint['model_state_dict'])\n",
-    "del codec.decoder\n",
+    "# del codec.decoder\n",
     "codec.eval();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f156141c-9fed-4893-a143-02abbe802822",
    "metadata": {},
    "outputs": [],
@@ -64,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b911f5f0-aff8-4352-b93f-489b4e18c3b2",
    "metadata": {},
    "outputs": [],
@@ -85,26 +127,31 @@
     "        webp.save(buff, format='WEBP', lossless=True)\n",
     "        webp_bytes = buff.getbuffer()\n",
     "        encode_time = time.time() - t0\n",
-    "        \n",
-    "        bpp = 8*len(webp_bytes)/(H*W)  \n",
+    "\n",
+    "        t0 = time.time()\n",
+    "        Y = walloc.pil_to_latent([PIL.Image.open(buff)], codec.latent_dim, codec.latent_bits, 3).to(device)\n",
+    "        X_hat = codec.decoder(Y)\n",
+    "        x_hat = codec.wavelet_synthesis(X_hat,codec.J)\n",
+    "        x_hat = codec.clamp(x_hat)\n",
+    "        decode_time = time.time() - t0\n",
     "        \n",
     "    return {\n",
     "        'compressed': webp_bytes,\n",
     "        'encode_time': encode_time,\n",
-    "        'bpp': bpp,\n",
+    "        'decode_time': decode_time,\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "07a4d392-f9b7-4d92-b656-a33ecffdf2d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7da1ebdf064d47a6af67fe3bddcc9331",
+       "model_id": "7e5b586a95cb4b139b9bc7f8addd85e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,6 +189,103 @@
    ],
    "source": [
     "np.median(walloc_ds['encode_time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d54fa09a-417d-42b2-a5a6-9338cd7fc0a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encode:  1.0085 megapixels per second\n"
+     ]
+    }
+   ],
+   "source": [
+    "enc_px_per_sec = np.array(walloc_ds['n_pixels'])/np.array(walloc_ds['encode_time'])\n",
+    "print(f\"Encode: {np.mean(enc_px_per_sec)/1e6 : .5g} megapixels per second\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d8520095-6d4a-485c-8f66-2f3775927f0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decode:  31.951 seconds per megapixel\n"
+     ]
+    }
+   ],
+   "source": [
+    "dec_sec_per_px = np.array(walloc_ds['decode_time'])/np.array(walloc_ds['n_pixels'])\n",
+    "print(f\"Decode: {1e6*np.mean(dec_sec_per_px) : .5g} seconds per megapixel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "996cf116-938c-43f8-b1a9-b8c5ecaf0eec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upload_ds = walloc_ds.remove_columns(['image','compressed'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7ed8a226-d47e-41c1-a609-aab5c20c7365",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09c3967facc64715a56cc8378e6952d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e0ad138911df4334be0e10d541f131e4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_walloc_4x_raspi/commit/fcaaa886d63680d0e1a63a1a82d8f7c5538dfb0f', commit_message='Upload dataset', commit_description='', oid='fcaaa886d63680d0e1a63a1a82d8f7c5538dfb0f', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "upload_ds.push_to_hub(\"danjacobellis/LSDIR_walloc_4x_raspi\",split='validation')"
    ]
   }
  ],
