--- a/RD/rd_table_raspi.ipynb
+++ b/RD/rd_table_raspi.ipynb
@@ -41,10 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "17273f0d-a1e7-42f4-b395-89ce55bce35f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "| Name         |   Encode (CPU) |   Decode (CPU) |\n",
+       "|:-------------|---------------:|---------------:|\n",
+       "| WaLLoC (4x)  |         0.826  |         0.0321 |\n",
+       "| WaLLoC (16x) |         1.0085 |         0.0314 |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data_rows = []\n",
     "for i_method, method in enumerate(methods):\n",
